@@ -1,35 +1,33 @@
 package com.webforj.samples.views.googlecharts.types;
 
 import com.webforj.component.googlecharts.GoogleChart;
-import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Arrays;
 
 public class ScatterChart {
-
   private static final String TITLE = "title";
 
   private final GoogleChart chart = new GoogleChart(GoogleChart.Type.SCATTER);
 
   public ScatterChart() {
-    Map<String, Object> options = new HashMap<>();
-    options.put(TITLE, "Scatter Chart");
-    options.put("hAxis", Map.of(TITLE, "Age"));
-    options.put("vAxis", Map.of(TITLE, "Weight"));
-    options.put("colors", List.of("#FFA500"));
-    options.put("backgroundColor", "transparent");
+    Map<String, Object> options = Map.of(
+        TITLE, "Scatter Chart",
+        "hAxis", Map.of(TITLE, "Age"),
+        "vAxis", Map.of(TITLE, "Weight"),
+        "colors", List.of("#FFA500"),
+        "backgroundColor", "transparent"
+    );
     chart.setOptions(options);
 
-    List<Object> data = new ArrayList<>();
-    data.add(Arrays.asList("Age", "Weight"));
-    data.add(Arrays.asList(8, 12));
-    data.add(Arrays.asList(4, 5.5));
-    data.add(Arrays.asList(11, 14));
-    data.add(Arrays.asList(4, 5));
-    data.add(Arrays.asList(3, 3.5));
-    data.add(Arrays.asList(6.5, 7));
+    List<Object> data = List.of(
+        List.of("Age", "Weight"),
+        List.of(8, 12),
+        List.of(4, 5.5),
+        List.of(11, 14),
+        List.of(4, 5),
+        List.of(3, 3.5),
+        List.of(6.5, 7)
+    );
     chart.setData(data);
   }
 
